logo contrast & bright fix

--- a/frontend/styles/rating.sass
+++ b/frontend/styles/rating.sass
@@ -395,7 +395,7 @@
     position: absolute
     top: -35px
     left: 0
-    background-color: $grey-3
+    background-color: $grey-2
     color: $black
     width: 100%
     height: 70px
@@ -405,7 +405,7 @@
 
     &:hover
       opacity: 1
-      transition: opacity 0.2s ease 0.2s
+      transition: opacity 0.2s ease
 
     &-icon
       font-size: 24px
